2025-05-20 LLM 적용 완료(필수적인요소)