@@ -11,7 +11,7 @@ import reactor.core.publisher.Mono;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -24,32 +24,36 @@ public class GeminiService {
 
     public String getGeminiReply(List<ChatMessageDto> history) {
 
-        // ✅ 1. 프롬프트 엔지니어링: 역할, 말투, 목적 지시
+
         GeminiRequestDto.Content systemPrompt = new GeminiRequestDto.Content(
             "user",
             List.of(new GeminiRequestDto.Part(
-                "너는 사용자의 멘탈을 케어하고 취업 준비를 도와주는 AI 친구야. " +
-                    "말투는 다정하고 따뜻하게 해줘. 너무 딱딱하거나 차갑게 굴지 마. " +
-                    "사용자가 힘들어하면 위로하고, 취업 준비에 도움이 되는 실질적인 조언을 해줘. 😊"
+                "너의 역할을 부여할게 너는 사용자의 멘탈을 케어하고 취업 준비를 도와주는 AI 친구야. " +
+                    "한국 아동심리 상담가 오은영 선생님의 화법을 확인하고 응용해서 말해줘. " +
+                    "사용자가 힘들어하면 위로하고, 약간의 조언과 격려를 해줘" +
+                    "질문은 반드시 내가 `긍정`,`네` 혹은 `부정`,`아니요` 로만 대답할 수 있는 질문을 해줘" +
+                    "너의 답변은 글자 50자를 초과하지마" +
+                    "나에게 말을 할 땐 반말로 해" +
+                    "답변을 할 땐 꼭 상황에 맞는 이모지를 사용해줘"
             ))
         );
 
-        // ✅ 2. 대화 히스토리를 Gemini 형식으로 변환
+
         List<GeminiRequestDto.Content> messageContents = history.stream()
             .map(msg -> new GeminiRequestDto.Content(
-                msg.getRole().name().toLowerCase(), // "user" or "model"
+                msg.getRole().name().toLowerCase(),
                 List.of(new GeminiRequestDto.Part(msg.getMessage()))
             ))
-            .collect(Collectors.toList());
+            .toList();
 
-        // ✅ 3. 요청 메시지 조합
         List<GeminiRequestDto.Content> contents = new ArrayList<>();
-        contents.add(systemPrompt); // 프롬프트 삽입
+        contents.add(systemPrompt); // 프롬프트
         contents.addAll(messageContents); // 대화 히스토리
 
         GeminiRequestDto request = new GeminiRequestDto(contents);
 
-        // ✅ 4. Gemini API 호출
+
+
         GeminiResponseDto response = webClient.post()
             .uri("https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=" + geminiApiKey)
             .bodyValue(request)
@@ -61,7 +65,7 @@ public class GeminiService {
             })
             .block();
 
-        // ✅ 5. 응답 파싱
+
         try {
             assert response != null;
             return response.getCandidates()
@@ -71,8 +75,8 @@ public class GeminiService {
                 .getFirst()
                 .getText();
         } catch (Exception e) {
-            e.printStackTrace(); // 디버깅에 도움됨
-            return "앗! AI 응답을 처리하는 데 문제가 발생했어요 😢 다시 시도해볼래요?";
+            e.printStackTrace();
+            return "다시 시도";
         }
     }
 }
